--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -215,3 +215,77 @@ jobs:
         run: .github/scripts/windows/build.bat
       - name: Test
         run: .github/scripts/windows/test.bat
+  BENCHMARKING:
+    name: BENCHMARKING
+    runs-on: ubuntu-22.04
+    steps:
+      - name: git checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: apt
+        run: |
+          set -x
+          sudo apt-get update
+          sudo apt-get install \
+            bison \
+            re2c \
+            locales \
+            openssl \
+            language-pack-de \
+            libsqlite3-dev \
+            libonig-dev \
+            libc-client-dev \
+            valgrind
+      - name: ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          key: "${{github.job}}-${{hashFiles('main/php_version.h')}}"
+          append-timestamp: false
+      - name: ./configure
+        run: |
+          set -x
+          ./buildconf --force
+          ./configure \
+            --disable-debug \
+            --with-valgrind \
+            --enable-opcache \
+            --enable-option-checking=fatal \
+            --prefix=/usr \
+            --with-config-file-scan-dir=/etc/php.d \
+            --with-mysqli=mysqlnd \
+            --with-pdo-sqlite \
+            --enable-mbstring \
+            --enable-sockets \
+            --with-openssl \
+            --enable-werror
+      - name: make
+        run: make -j$(/usr/bin/nproc) >/dev/null
+      - name: make install
+        uses: ./.github/actions/install-linux
+      - name: Prepare SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.BENCHMARK_DATA_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          git config --global user.name "Benchmark"
+          git config --global user.email "benchmark@php.net"
+      - name: Setup
+        run: |
+          sudo service mysql start
+          mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS wordpress"
+          mysql -uroot -proot -e "CREATE USER 'wordpress'@'localhost' IDENTIFIED BY 'wordpress'; FLUSH PRIVILEGES;"
+          mysql -uroot -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'wordpress'@'localhost' WITH GRANT OPTION;"
+          mkdir -p /etc/php.d
+          echo zend_extension=opcache.so >> /etc/php.d/opcache.ini
+          echo opcache.enable=1 >> /etc/php.d/opcache.ini
+          echo opcache.enable_cli=1 >> /etc/php.d/opcache.ini
+      - name: Benchmark
+        run: php benchmark/benchmark.php true
+      - name: Show diff
+        if: github.event_name == 'pull_request'
+        run: >-
+          php benchmark/generate_diff.php
+          ${{ github.event.pull_request.head.sha }}
+          $(git merge-base ${{ github.base_ref }} ${{ github.head_ref }})
+          > $GITHUB_STEP_SUMMARY
